--- a/index.html
+++ b/index.html
@@ -73,6 +73,21 @@
 	        </div>
 	    </div>
 	</div>
+	<section>
+			<div class="container mt-5">
+				<h1>Read More Quotes Here:</h1>
+					<ul class="pagination ml-2">
+						<li class="page-item"><a href="https://smilionaire.github.io/page1/" class="page-link">PREV</a></li>
+						<li class="page-item"><a href="https://smilionaire.github.io/page1/" class="page-link">1</a></li>
+						<li class="page-item"><a href="https://smilionaire.github.io/page2/" class="page-link">2</a></li>
+						<li class="page-item"><a href="https://smilionaire.github.io/page3/" class="page-link">3</a></li>
+						<li class="page-item"><a href="https://smilionaire.github.io/page4/" class="page-link">4</a></li>
+						<li class="page-item active"><a href="https://smilionaire.github.io/page5/" class="page-link">5</a></li>
+						<li class="page-item disabled"><a href="https://smilionaire.github.io/page3/" class="page-link">NEXT</a></li>
+					</ul>
+			</div>
+	</section>
+
 	
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.17/umd/popper.min.js"></script>
